# srtn-calc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp  process.cpp  process.hpp  srtn.cpp  srtn.hpp
test/: CMakeLists.txt
test/source/: imgui-test_test.cpp  srtn-calc_test.cpp
